# Backtesting---Engine

./: .gitignore  CMakeLists.txt  README.md  design.txt  package-lock.json  pyproject.toml  requirements.txt
config/: default.yaml  strategy_example.yaml
dashboard/: package-lock.json  package.json
dashboard/src/: App.jsx  main.jsx
dashboard/src/components/: ErrorBoundary.jsx  TradingBacktestAnalysis.jsx
engine/include/felix/: datastream.hpp  event_loop.hpp  execution.hpp  matching.hpp  order_book.hpp  portfolio.hpp  risk.hpp  tick_record.hpp
engine/src/bindings/: pybind_module.cpp
engine/src/core/: datastream.cpp  event_loop.cpp  portfolio.cpp
engine/src/data/: tick_record.cpp
engine/src/matching/: matching.cpp  order_book.cpp
engine/src/risk/: risk_engine.cpp
python/felix/analytics/: metrics.py  plots.py
python/felix/strategy/: base.py
python/felix/utils/: data_prep.py
results/: trades.csv
results/combined_backtest/: strategy1_trades_log.csv  strategy2_trades_log.csv
scripts/: backtrader_runner_updated.py  check_pnl.py  combined_backtest.py  combined_backtest_old.py  compare_results.py  load_dataset_btc.py  load_dataset_old.py  load_datasets.py  preprocess_data.py  run_backtest.py  run_backtest_bollinger.py  run_backtest_buyhold.py  run_backtest_ema.py  run_backtest_momentum.py  run_backtest_stvwap.py  run_combined_strat.py  verify_results.py
tests/cpp/: test_datastream.cpp  test_event_loop.cpp  test_matching.cpp
tests/python/: test_metrics.py  test_more_tests.py  test_position_pnl.py  test_sl_tp.py  test_strategy_api.py
