[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.6.0", "cmake>=3.18"]
build-backend = "setuptools.build_meta"

[project]
name = "felix-backtester"
version = "0.1.0"
description = "A high-performance C++ HFT backtester with Python bindings"
authors = [{name = "Felix User", email = "user@example.com"}]
license = {text = "MIT"}
dependencies = [
    "numpy",
    "pandas",
    "polars",
    "matplotlib",
    "pyyaml"
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["python"]
